Changelog
=========

4.6.dev0 - (unreleased)
-----------------------

4.5 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.4 - (2013-05-20)
------------------
* Bug fix: Fixed permission for manage_translations_form, anonymous
  can't access the page anymore.
  [prospchr fixes #14318]

4.3 - (2012-08-27)
------------------
* Cleanup: fixed docstrings typos and formatting
  [ghicaale]

4.2 - (2012-06-13)
------------------
* Bug fix: Force unicode for Titles in getDeletableLanguages.py
  [prospchr fixes #5165]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Cleanup: Fixed all pylint, pyflakes violations
  [ghicaale - EEA #4295]
* Change: replace dependecy to collective.monkey with collective.monkeypatcher
  [ghicaale - EEA #4295]
* Fixed bulk reset of expiration_date
  [voineali - EEA #3956]
* Renamed import step from eea.themecentre.various to various
  [tiberich - EEA #4319]
* Feature: Added upgrade steps
  [voineali - EEA #4392]
* Feature: Plone 4.x compatible release
  [ghicaale - EEA #4295]

0.2 - (2010-03-25)
------------------
* Fixed cache invalidation compatibility with Plone 3

0.1 - (2010-03-21)
------------------
* Initial release
